# neural-memory

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AUDIT_TRACKER.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  VERSION_AND_FEATURES.md  docker-compose.postgres.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude-plugin/: SKILL.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  notify-telegram.yml  release-drafter.yml  release.yml
.neuralmemory/: surface.nm
.rune/: PR-56-fix-plan.md  PR-56-postgres-container-fix-plan.md  plan-brain-purity-p1.md  plan-brain-purity-p2.md  plan-brain-purity-p3.md  plan-brain-purity-p4.md  plan-brain-purity-p5.md  plan-brain-purity.md  plan-brain-quality.md  plan-fidelity-p1.md  plan-fidelity-p2.md  plan-fidelity-p3.md  plan-fidelity-p4.md  plan-fidelity.md  plan-v3-phase1.md  plan-v3-phase2.md  plan-v3-phase3.md  plan-v3-phase4.md  plan-v3-phase5.md  plan-v3.md  plan-v4.md  progress.md
agents/: memory-companion.md
benchmarks/: nm_vs_rag.py
chatbot/: README.md  app.py  requirements.txt  train_docs_brain.py
commands/: audit.md  intake.md  recap.md
dashboard/: README.md  components.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/e2e/: smoke.spec.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: types.ts
dashboard/src/i18n/: en.json  vi.json
dashboard/src/stores/: useBrainStore.ts  useLayoutStore.ts
docs/: FAQ.md  GUIDE.md  PERFORMANCE_AUDIT_REPORT.md  SECURITY_AUDIT_POSTGRES_BACKEND.md  SECURITY_AUDIT_REPORT.md  architecture.md  benchmarks.md  changelog.md  index.md  integration.md  packaging-free-paid.md
docs/agent-instructions/: .cursorrules  CLAUDE.md
docs/api/: mcp-tools.md  python.md
docs/architecture/: overview.md
docs/audits/: 2026-06-comprehensive-audit.md
docs/blog/: neural-memory-openclaw.md  why-i-built-neuralmemory.md
docs/concepts/: how-it-works.md
docs/demo/: demo_script.py
docs/getting-started/: cli-reference.md  cli.md  quickstart.md
docs/guides/: agent-memory-governance.md  embedding-setup.md  mcp-server.md  pro-quickstart.md  temporal-recipes.md
docs/landing/: index.html  pricing.md  pro-landing.html  pro.md
docs/overrides/partials/: head.html
docs/promo/: devto-article.md  discord-anthropic.md  hackernews.md  reddit-claudeai.md  reddit-localllama.md
hooks/: hooks.json  stop-capture.py
integrations/neural-memory/: SKILL.md
integrations/neuralmemory/: README.md  openclaw.plugin.json  package-lock.json  package.json
integrations/neuralmemory/src/: index.ts  types.ts
integrations/neuralmemory/test/: config.test.ts  strip-metadata.test.ts
integrations/openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
integrations/openclaw-plugin/src/: index.ts  mcp-client.ts  tools.ts  types.ts
integrations/openclaw-plugin/test/: config.test.ts  tools.test.ts
npm-package/: README.md  server.json
pay-hub/src/: index.ts
plans/reports/: consultation-260302-2136-gemini-embedding-parallel-anchors-report.md
scripts/: benchmark_backends.py  benchmark_cognee_results.json  benchmark_cognee_vs_nm.py  benchmark_mem0_vs_nm.py  benchmark_scale.py  check_distribution.py  ci_fix.py  e2e_gemini_recall_100vi.py  gen_cli_docs.py  gen_mcp_docs.py  generate_seed_brains.py  measure_token_breakdown.py  postgres-init.sh  pre_ship.py  prepare_training_markdown.py  profile_recall.py  prune-noisy-concepts.py  sync_refs.py
scripts/benchmark/: _debug_single.py  _light_hook_v1_minimal.py  _light_hook_v2_locked.py  _light_hook_v3_pathlib.py  _light_hook_v4_disabled.py  _mem_profile.py  baselines.py  compare_baselines.py  compare_inprocess.py  config.py  data_loader.py  hook_light_spike.py  hook_spawn_latency.py  ingest.py  judge.py  longmemeval.py  metrics.py  mini_bench.py  mini_bench_ids.json  reader.py  report.py  run_inprocess_with_restart.py  run_instance.py
skills/: README.md
src/neural_memory/: __init__.py  config_presets.py  unified_config.py
src/neural_memory/cli/: __init__.py  _helpers.py  config.py  doctor.py  embedding_setup.py  full_setup.py  ide_rules.py  main.py  setup.py  storage.py  tui.py  update_check.py  wizard.py
src/neural_memory/core/: __init__.py  action_event.py  brain.py  brain_mode.py  brain_persistence.py  eternal_context.py  fiber.py  memory_types.py  neuron.py  project.py  synapse.py  trigger_engine.py
src/neural_memory/engine/: __init__.py  arousal.py  (+89 more)
sync-hub/: wrangler.toml
sync-hub/src/: index.ts  types.ts
tests/: e2e_gemini_recall.py  e2e_gemini_recall_100vi.py  e2e_ollama_recall.py  test_encryption.py
tests/e2e/: test_api.py
tests/integration/: test_encoding_flow.py  test_query_flow.py  test_sql_storage.py  test_tllr_features_e2e.py
tests/stress/: test_edge_cases.py  test_error_recovery.py
tests/unit/: test_abstraction_constraints.py  test_action_intent_extraction.py  test_action_log.py  test_activation.py  test_adaptive_depth_v2.py  test_adaptive_instructions.py  test_adaptive_scaling.py  test_aggressive_consolidation.py  test_alerts.py  test_arousal.py  test_audit_fixes.py  test_audit_synapses.py  test_auto_save_intelligence.py  test_auto_tags.py  test_baby_mi_features.py  test_brain_acl.py  test_brain_evolution.py  test_brain_import_robustness.py  test_brain_isolation.py  test_brain_mode.py  test_brain_package.py  test_brain_registry.py  test_brain_runtime_config_migration.py  test_brain_scanner.py  test_brain_settings_passthrough.py  test_brain_transplant.py  test_brain_versioning.py  test_cascading_retrieval.py  test_causal_inclusion.py  test_causal_recall.py  test_causal_recall_integration.py  test_causal_traversal.py  test_change_log.py  test_chunking.py  test_cli_update_notice_policy.py  test_co_activation_storage.py  test_code_semantic.py  test_cognitive.py  test_cognitive_phase4.py  test_compression.py  (+199 more)
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
(+358 files in other folders)
